# pynini

./: .gitignore  AUTHORS  BUILD.bazel  CHANGELOG.md  CHEATSHEET  CHEATSHEET.md  CONTRIBUTING.md  MANIFEST.in  NEWS  PKG-INFO  README.md  README.rst  WORKSPACE.bazel  pynini_test.py  pyproject.toml  requirements.txt  setup.py
bazel/: BUILD.bazel  cython.BUILD.bazel  six.BUILD.bazel  workspace.bzl
extensions/: BUILD.bazel  _pynini.cpp  _pynini.pyx  _pywrapfst.cpp  _pywrapfst.pxd  _pywrapfst.pyx  cdrewrite.h  cdrewritescript.cc  cdrewritescript.h  checkprops.h  cintegral_types.pxd  cios.pxd  cmemory.pxd  concatrange.h  concatrangescript.cc  concatrangescript.h  cpynini.pxd  cpywrapfst.pxd  cross.h  crossscript.cc  crossscript.h  cutility.pxd  defaults.cc  defaults.h  fstcdrewrite-main.cc  fstconcatrange-main.cc  fstcross-main.cc  fstlenientlycompose-main.cc  fstoptimize-main.cc  getters.cc  getters.h  gtl.cc  gtl.h  lenientlycompose.h  lenientlycomposescript.cc  lenientlycomposescript.h  optimize.h  optimizescript.cc  optimizescript.h  paths.h  (+19 more)
pynini/: BUILD.bazel  __init__.py  __init__.pyi
pynini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pynini/examples/: BUILD.bazel  case.py  chatspeak.py  chatspeak_model.py  dates.py  g2p.py  numbers.py  plurals.py  t9.py  weather.py
pynini/export/: BUILD.bazel  export.py  grm.py  grm_example.py  grm_py_build_defs.bzl  multi_grm.py  multi_grm_example.py
pynini/lib/: BUILD.bazel  byte.py  edit_transducer.py  features.py  paradigms.py  pynutil.py  rewrite.py  rule_cascade.py  stringfile.py  tagger.py  utf8.py
pywrapfst/: BUILD.bazel  __init__.pyi
scripts/: make_chatspeak_lm
src/: cdrewrite.h  cdrewritescript.cc  cdrewritescript.h  checkprops.h  cintegral_types.pxd  cios.pxd  cmemory.pxd  concatrange.h  concatrangescript.cc  concatrangescript.h  containment.h  containmentscript.cc  containmentscript.h  cpynini.pxd  cpywrapfst.pxd  crossproduct.h  crossproductscript.cc  crossproductscript.h  cutility.pxd  fst.pxd  fst_util.pxd  getters.cc  getters.h  gtl.cc  gtl.h  ios.pxd  lenientlycompose.h  lenientlycomposescript.cc  lenientlycomposescript.h  merge.cc  merge.h  mergescript.cc  mergescript.h  mergesymbols.cc  mergesymbols.h  mergesymbolsscript.cc  mergesymbolsscript.h  optimize.h  optimizescript.cc  optimizescript.h  (+39 more)
testdata/: cheese.map
tests/: BUILD.bazel  byte_test.py  case_test.py  chatspeak_model_test.py  chatspeak_test.py  dates_test.py  edit_transducer_test.py  export_test.py  features_test.py  g2p_test.py  grm_test.py  multi_grm_test.py  numbers_test.py  paradigms_test.py  plurals_test.py  pynini_test.py  pynutil_test.py  rewrite_test.py  rule_cascade_test.py  stringfile_test.py  t9_test.py  tagger_test.py  utf8_test.py  weather_test.py
tests/testdata/: BUILD.bazel  chatspeak_lexicon.tsv  str.map  tokenizer_testdata.tsv
