# Copyright 2015-2022 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

py_library(
    name = "case",
    srcs = ["case.py"],
    deps = [
        "//pynini",
        "//pynini/lib:rewrite",
    ],
)

py_library(
    name = "chatspeak",
    srcs = ["chatspeak.py"],
    srcs_version = "PY3ONLY",
    deps = [
        "//pynini",
        "//pynini/lib:byte",
        "//pynini/lib:pynutil",
        "//pynini/lib:rewrite",
    ],
)

py_library(
    name = "dates",
    srcs = ["dates.py"],
    deps = [
        "//pynini",
        "//pynini/lib:byte",
        "//pynini/lib:pynutil",
        "//pynini/lib:rewrite",
    ],
)

py_library(
    name = "g2p",
    srcs = ["g2p.py"],
    deps = [
        "//pynini",
        "//pynini/lib:pynutil",
        "//pynini/lib:rewrite",
    ],
)

py_library(
    name = "numbers",
    srcs = ["numbers.py"],
    deps = [
        "//pynini",
        "//pynini/lib:pynutil",
        "//pynini/lib:rewrite",
    ],
)

py_library(
    name = "plurals",
    srcs = ["plurals.py"],
    deps = [
        "//pynini",
        "//pynini/lib:pynutil",
        "//pynini/lib:rewrite",
    ],
)

py_library(
    name = "t9",
    srcs = ["t9.py"],
    srcs_version = "PY3ONLY",
    deps = [
        "//pynini",
        "//pynini/lib:pynutil",
        "//pynini/lib:rewrite",
    ],
)

py_library(
    name = "weather",
    srcs = ["weather.py"],
    deps = [
        "//pynini",
        "//pynini/lib:byte",
        "//pynini/lib:rewrite",
    ],
)
